# Web-Print_API

./: '  Cargo.toml  \  todo
.sqlx/: query-0188ac25d84bc9e8448229453774340784801be5cc974eb87128e79dff29cc69.json  query-1dc0c4da5f777328cc20c03c7a0b002a5d6cb631923e666c4dc54402a70b1833.json  query-2c2e412da1ac159d13e1c1bbce29fa01541fb031110519097ff43c207b1c8ceb.json  query-35825c28f4af8e6cb623113730c57b1715e1f7d3fa947c4eee86ce3d0297650f.json  query-3ad44fa4e4c92ebfc3d53305eb49ba3dfd51fac8a27855950bb19edecc8c94f5.json  query-43905b83f73a51bb3c685eef0628f0a7bde5d5f0f3432f8d284ac3f780fc0b0d.json  query-45edc10c095d19929949e1ce011fd5f48346834c327fb5105c9262fdf84274ca.json  query-5595305a8b9b962d153667e130530efc85a30a038181ecf1ae17844ac7c10c7e.json  query-685a1493a3489e09cdfaf1d0cc2f7a74a9a627deb333a4d26a4ef39ef3489819.json  query-6d612973e03abdef75f034907c0a25c9a81e09187a58be4c390ddf46eb94346d.json  query-71bb590674d7db935e8ae111af524b311a15844422bbac4a009b2a66096bf0fb.json  query-764d0dc2f20c76d47839ec2f8dae49b6d108e0e104870e85e2f5c77d358eb955.json  query-9651b1c9d4294104f70af90f9fa5c88cc86c64955ca397f13778d8c9da172177.json  query-aa67ad90796003f28217044e93dd3813b4cb1e451c901f3f3002d37f9baed979.json  query-bbbc3fee92044c425e40b1a49a755e9e228f6ba5daa255d8e580cb9f3d4e7828.json  query-c1b24fc34a9eb961021c9c900861c7513cf0600d8394edeb16f491bb36db77bb.json  query-c92362aa3c320e5d6582b550ffc86ed6d0f2a30da3459904d726128041b887b4.json  query-ca413337248d33f9a7f7b51cb59187e891229c8e945bf267f185be5f95ab6498.json  query-cf9879ca5e5aed3deb81701440cd34fd3b21df03f5e3beb0060251a3a7d5654a.json  (+6 more)
(+71 files in other folders)
