[package]
name = "Web-Print_API"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] } 
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "uuid", "chrono" ] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
