[package]
name = "Web-Print_API"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] } 
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "uuid", "chrono", "macros", "bigdecimal" ] }
uuid = { version = "1.21.0", features = ["serde", "v4"] }
bigdecimal = {version = "0.4.10", features = ["serde"]}
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
rand = "0.10.0"
axum =  { version = "0.8.8", features = ["multipart"] }
native-json = "1.0"
serde_json = "1"
axum-macros = "0.5.0"
dotenvy = "0.15.7"
